name:                random-program-generation
version:             0.1.0.0
synopsis:            TODO
description:         Implementation of paper
                     Generating Contsrained Random Data with Uniform Distribution - Claessen K., Duregard J., Palka M.
license:             BSD3
-- license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:       >= 1.16
build-type:          Simple

library
  exposed-modules:   Enumeration
  other-modules:     IntervalSetList
                     Bignum
                     BignumNum
  build-depends:     base >= 4.7, semigroups, QuickCheck, random
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src
  default-language:  Haskell2010

executable           program-generator
  build-depends:     base >= 4.7, containers, mtl,
                     wl-pprint-text, text,
                     random-source,
                     random-program-generation
  main-is:           RandomProgramGenerator.hs
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
                     -main-is RandomProgramGenerator
  ghc-prof-options:  -fprof-auto

executable           generator
  build-depends:     base >= 4.7, random-program-generation
  main-is:           Generator.hs
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
                     -main-is Generator
  ghc-prof-options:  -fprof-auto

executable           generator-gadt
  build-depends:     base >= 4.7, mtl, random
  main-is:           RandomProgramGenerationGADT.hs
  default-language:  Haskell2010
  ghc-options:       -W -Wall
                     -fwarn-monomorphism-restriction
                     -fno-warn-type-defaults
                     -fno-warn-name-shadowing
                     -ferror-spans -rtsopts
                     -main-is RandomProgramGenerationGADT
  ghc-prof-options:  -fprof-auto
--  hs-source-dirs:    src
--  other-modules:     Utils.Utils
--  ghc-options:       -main-is MyMain

